--- a/README.adoc
+++ b/README.adoc
@@ -29,4 +29,4 @@ Bootstrap dotfiles
 
 === To-Do
 * replace zinit with antibody + zsh-defer?
-
+* use better gcm alias: https://stackoverflow.com/a/70080259/916223
