--- a/install
+++ b/install
@@ -4,3 +4,7 @@ DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd)"
 
 # need to give non-standard rcrc location for initial install
 RCRC=$DIR/rcrc rcup -v
+
+echo "~/dev/personal/dotfiles/nvchad-custom -> ~/.config/nvim/lua/custom"
+ln -sf ~/dev/personal/dotfiles/nvchad-custom ~/.config/nvim/lua/custom
+
