--- a/install
+++ b/install
@@ -1,10 +1,15 @@
 #!/usr/bin/env bash
 
-DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd)"
+if ! type brew >/dev/null; then
+  echo "please install homebrew"
+  echo "  https://brew.sh/"
+  exit 1
+fi
 
-# need to give non-standard rcrc location for initial install
-RCRC=$DIR/rcrc rcup -v
+if ! type ansible-playbook >/dev/null; then
+  echo "please install ansible"
+  echo "  brew install ansible"
+  exit 1
+fi
 
-echo "~/dev/personal/dotfiles/nvchad-custom -> ~/.config/nvim/lua/custom"
-ln -sf ~/dev/personal/dotfiles/nvchad-custom ~/.config/nvim/lua/custom
-
+ansible-playbook bootstrap.yml
